Make improvements to iterator test harness
* Rename base test class, so it's not coupled to JUnit in its API (just
  as a dependency)
* Use Streams to provide tuples of input-expectedOutput-testCase
* Make it easy to get the built-in test cases as a stream, so it can be
  used to create a stream of tuples
* Remove unnecessary classes and move some utility code into private
  methods
* Inline small methods and update the iterator tests that use this
  harness prepare their input/expectedOutput in similar ways so they are
  easier to maintain
* Use the default parameter naming for the tests, and ensure this
  includes the test case name and input in the test name
* Make things package-private if they don't need to be public